# XM-code

./: .gitignore  1_test_solve.py  2_test_creatematrix.py  3_test_colmap_glomap.py  4_test_unidepth.py  5_test_ceres.py  CMakeLists.txt  LICENSE  README.md  debug.ply  previous.py  requirements.txt  unidepth_interface.py
XM/: CMakeLists.txt
XM/cmake/: CUOPT_example.cmake
XM/include/Dense/: eig.h  matdivide.h  scalar.h  sqrt.h  transpose.h
XM/include/Optimization/: optimization.h
XM/include/Sparse/: sparseformat.h  sparsesubmatrix.h  spmatmul.h
XM/include/Utils/: memory.h
XM/include/XM/: checkeig.h  trustregion.h
XM/src/: XM_main.cu
assets/Replica/output/: edges.npy  filename.npy  landmarks.npy  landmarkx.npz  landmarky.npz  rgbs.npy  vis.npz  weights.npy
assets/SIMPLE4/sparse/: cameras.txt
assets/tempdata/: filename.txt  output.txt  relative_pose.txt
cmake/: CUOPT_example.cmake
example/python/: 1_test_solve.py  2_test_creatematrix.py  3_test_colmap_glomap.py
example/python/utils/: cameramath.py  recoversolution.py  visualization.py
include/Dense/: batchedQR.h  matdiagmul.h  matdot.h  matmul.h  trace.h
include/Solver/: densechol.h
include/Sparse/: stack.h
include/Utils/: check.h  concept.h
include/XM/: checkeig.h
utils/: ceresforXM.py  checkconnection.py  creatematrix.py  error.py  io.py  readgt_BAL.py  readgt_TUM.py  readgt_colmap.py  readgt_replica.py  recoversolution.py  visualization.py
